<resources>
    <string name="fb_msg_loading">Loading…</string>
    <string name="zm_lbl_copy_to_clipboard">Copy to Clipboard</string>
    <string name="zm_lbl_pull_down_refresh_list_release_to_refresh">Release to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_pull_down_to_refresh">Pull down to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_loading">Loading…</string>
    <string name="zm_date_time_set">Set</string>
    <string name="zm_date_time_cancel">Cancel</string>
    <string name="zm_time_picker_dialog_title">Set time</string>
    <string name="zm_msg_loading">Loading…</string>
    <string name="zm_btn_back">Back</string>
    <string name="zm_btn_exit">Exit</string>
    <string name="zm_btn_close">Close</string>
    <string name="zm_btn_select">Select</string>
    <string name="zm_btn_ok">OK</string>
    <string name="zm_btn_cancel">Cancel</string>
    <string name="zm_btn_continue">Continue</string>
    <string name="zm_btn_retry">Retry</string>
    <string name="zm_lbl_internal_storage">Device storage</string>
    <string name="zm_alert_no_sdcard">No media card</string>
    <string name="zm_lbl_sdcard">Media card %s</string>
    <string name="zm_lbl_usb_storage">USB storage %s</string>
    <string name="zm_lbl_external_storage">Media card</string>
    <plurals name="zm_lbl_folder_items">
        <item quantity="one">1 Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="zm_file_size_gb">%s GB</string>
    <string name="zm_file_size_mb">%s MB</string>
    <string name="zm_file_size_kb">%s KB</string>
    <string name="zm_file_size_bytes">%s B</string>
    <string name="zm_select_a_image">Select an Image</string>
    <string name="zm_login_to_start_conf">Sign In</string>
    <string name="zm_login_with_facebook">Facebook</string>
    <string name="zm_login_with_google">Google</string>
    <string name="zm_login_with_sso">SSO</string>
    <string name="zm_login_step_connecting">Connecting…</string>
    <string name="zm_login_step_authenticating">Getting buddy list…</string>
    <string name="zm_login_step_negotiating">Negotiating…</string>
    <string name="zm_connecting_facebook">Connecting…</string>
    <string name="zm_mi_start_conf">Meet Now</string>
    <string name="zm_mi_return_to_conf">Back to Meeting</string>
    <string name="zm_mi_invite_to_conf">Invite to Meeting</string>
    <string name="zm_mi_remove_buddy">Remove…</string>
    <string name="zm_mi_invite_again">Invite again</string>
    <string name="zm_mi_mute">Mute</string>
    <string name="zm_mi_unmute">Unmute</string>
    <string name="zm_mi_make_host">Make Host</string>
    <string name="zm_mi_assign_cohost">Make Co-host</string>
    <string name="zm_mi_withdraw_cohost">Withdraw Co-Host Permission</string>
    <string name="zm_mi_expel">Remove</string>
    <string name="zm_mi_chat">Chat</string>
    <string name="zm_mi_spotlight_video">Spotlight Video</string>
    <string name="zm_mi_unspotlight_video">Cancel Spotlight Video</string>
    <string name="zm_mi_allow_record">Allow Record</string>
    <string name="zm_mi_disallow_record">Forbid Record</string>
    <string name="zm_mi_create_new_contact">Create Phone Contact</string>
    <string name="zm_mi_add_to_existing_contact">Add to Existing Phone Contact</string>
    <string name="zm_mi_switch_camera">Switch Camera</string>
    <string name="zm_mi_enter_silent_mode">Put On Hold</string>
    <string name="zm_mi_leave_silent_mode">Take Off Hold</string>
    <string name="zm_mi_put_on_waiting">Put in Waiting Room</string>
    <string name="zm_mi_lock_meeting">Lock Meeting</string>
    <string name="zm_mi_lock_webinar_18265">Lock Webinar</string>
    <string name="zm_mi_unlock_meeting">Unlock Meeting</string>
    <string name="zm_mi_lock_share">Lock Share</string>
    <string name="zm_mi_unlock_share">Unlock Share</string>
    <string name="zm_mi_allow_panelist_video">Allow Panelist Start Video</string>
    <string name="zm_mi_allow_attendee_raisehand">Allow Attendee To Raise Hand</string>
    <string name="zm_mi_mute_on_entry">Mute Upon Entry</string>
    <string name="zm_mi_play_enter_exit_chime">Play Enter/Exit Chime</string>
    <string name="zm_mi_put_on_hold_on_entry">Put Attendee In Waiting List</string>
    <string name="zm_mi_disconnect_audio">Disconnect Audio</string>
    <string name="zm_mi_speaker_phone">Speaker On</string>
    <string name="zm_mi_bluetooth">Bluetooth</string>
    <string name="zm_mi_ear_phone">Speaker Off</string>
    <string name="zm_mi_wired_headset">Wired Headset</string>
    <string name="zm_mi_video_stop">Stop Video</string>
    <string name="zm_mi_video_ask_to_start">Ask to Start Video</string>
    <string name="zm_mi_block_user">Block Contact</string>
    <string name="zm_mi_unblock_user">Unblock Contact</string>
    <string name="zm_mi_allow_attendees_chat_11380">Allow Attendees Chat To:</string>
    <string name="zm_mi_no_one_11380">No one</string>
    <string name="zm_mi_panelists_and_attendees_11380">All Panelists And Attendees</string>
    <string name="zm_mi_host_only_11380">Host Only</string>
    <string name="zm_lbl_input_meeting_link">OR, JOIN BY MEETING LINK</string>
    <string name="zm_lbl_meeting_number_discription">Meeting ID is a 9 or 10 digit number</string>
    <string name="zm_lbl_name_instructions">Please enter your name</string>
    <string name="zm_lbl_password_instructions">Please enter your meeting password</string>
    <string name="zm_lbl_name_password_instructions">Please enter your name and the meeting password</string>
    <string name="zm_lbl_incorrect_meeting_password">Incorrect meeting password, please try again</string>
    <string name="zm_lbl_everyone">Chat with All</string>
    <string name="zm_lbl_role_me">(me)</string>
    <string name="zm_lbl_role_host">(host)</string>
    <string name="zm_lbl_role_me_host">(me, host)</string>
    <string name="zm_lbl_role_cohost">(co-host)</string>
    <string name="zm_lbl_role_me_cohost">(me, co-host)</string>
    <string name="zm_lbl_role_in_silent_mode">(On Hold)</string>
    <string name="zm_lbl_version">Version</string>
    <string name="zm_lbl_alert_me_for_im_message">Message Notifications</string>
    <string name="zm_lbl_alert_sound">Alert Sound</string>
    <string name="zm_lbl_alert_vibrate">Vibrate</string>
    <string name="zm_lbl_alert_option_desc">Specify your preference to be notified by Sound or Vibration when a new message arrives.</string>
    <string name="zm_lbl_meeting_host_colon">Host:</string>
    <string name="zm_lbl_meeting_id">Meeting ID:</string>
    <string name="zm_lbl_meeting_id2">Meeting ID</string>
    <string name="zm_lbl_topic_colon">Topic: %s</string>
    <string name="zm_lbl_duration">Duration</string>
    <string name="zm_lbl_date">Date:</string>
    <string name="zm_lbl_time">Time:</string>
    <string name="zm_lbl_time_recurring">This is a recurring meeting</string>
    <string name="zm_lbl_invite_buddy_fb">Invite Facebook Contacts</string>
    <string name="zm_lbl_invite_buddy_google">Invite Google IM Contacts</string>
    <string name="zm_lbl_copy_url">Copy URL</string>
    <string name="zm_lbl_delete">Delete</string>
    <string name="zm_lbl_buddy_invited">Invited</string>
    <string name="zm_lbl_buddy_invite_email">To invite people to Google IM, type their email addresses below:</string>
    <string name="zm_lbl_buddy_invite_invitation_msg">wants to chat with you</string>
    <string name="zm_lbl_topic">Topic</string>
    <string name="zm_lbl_topic_default">My Meeting</string>
    <string name="zm_lbl_password_schedule">Meeting Password(optional)</string>
    <string name="zm_lbl_domains_schedule">Specified Domains</string>
    <string name="zm_lbl_password">Password</string>
    <string name="zm_lbl_when">When</string>
    <string name="zm_lbl_date_on_schedle">Date</string>
    <string name="zm_lbl_from">From</string>
    <string name="zm_lbl_to">To</string>
    <string name="zm_lbl_repeat">Repeat</string>
    <string name="zm_lbl_end_repeat">End Repeat</string>
    <string name="zm_lbl_im_alert_always">Always</string>
    <string name="zm_lbl_im_alert_idle">After I am offline from desktop chat</string>
    <string name="zm_lbl_im_receive_notification">RECEIVE NOTIFICATIONS</string>
    <string name="zm_lbl_repeat_never">Never</string>
    <string name="zm_lbl_repeat_daily">Daily</string>
    <string name="zm_lbl_repeat_weekly">Weekly</string>
    <string name="zm_lbl_repeat_biweekly">Biweekly</string>
    <string name="zm_lbl_repeat_monthly">Monthly</string>
    <string name="zm_lbl_repeat_yearly">Yearly</string>
    <string name="zm_lbl_repeat_never_in_list">None</string>
    <string name="zm_lbl_repeat_daily_in_list">Every Day</string>
    <string name="zm_lbl_repeat_weekly_in_list">Every Week</string>
    <string name="zm_lbl_repeat_biweekly_in_list">Every 2 Weeks</string>
    <string name="zm_lbl_repeat_monthly_in_list">Every Month</string>
    <string name="zm_lbl_repeat_yearly_in_list">Every Year</string>
    <string name="zm_lbl_end_repeat_never">Never</string>
    <string name="zm_lbl_meeting_type">Meeting Type</string>
    <string name="zm_lbl_meeting_type_video_meeting">Video Meeting</string>
    <string name="zm_lbl_meeting_type_web_meeting">Screen Share Meeting</string>
    <string name="zm_btn_more_no_dot">More</string>
    <string name="zm_btn_copy">Copy</string>
    <string name="zm_btn_invite">Invite</string>
    <string name="zm_btn_send">Send</string>
    <string name="zm_btn_leave_conf">Leave</string>
    <string name="zm_btn_buddy_invite_send">Invite</string>
    <string name="zm_btn_mute_audio">Mute Audio</string>
    <string name="zm_btn_stop_video">Stop Video</string>
    <string name="zm_btn_participants_chat">Participants</string>
    <string name="zm_btn_chats">Chats</string>
    <string name="zm_btn_qa">Q&amp;A</string>
    <string name="zm_btn_share">Share</string>
    <string name="zm_btn_stop_share">Stop Share</string>
    <string name="zm_btn_share_image">Photo</string>
    <string name="zm_btn_share_url">Web URL</string>
    <string name="zm_btn_share_box">Box</string>
    <string name="zm_btn_share_dropbox">Dropbox</string>
    <string name="zm_btn_share_from_bookmark">Bookmark</string>
    <string name="zm_btn_share_local_file">Document</string>
    <string name="zm_btn_share_one_drive">OneDrive</string>
    <string name="zm_btn_share_screen">Screen</string>
    <string name="zm_btn_share_whiteboard">Share Whiteboard</string>
    <string name="zm_btn_share_google_drive">Google Drive</string>
    <string name="zm_btn_raise_hand">Raise Hand</string>
    <string name="zm_btn_lower_hand">Lower Hand</string>
    <string name="zm_hint_buddy_invite_email">Enter email addresses here, separated by commas.</string>
    <string name="zm_title_invite">Invite</string>
    <string name="zm_title_setting">Settings</string>
    <string name="zm_title_feedback">Feedback</string>
    <string name="zm_msg_conf_waiting_to_invite_title">Invite Others</string>
    <string name="zm_msg_conf_waiting_to_invite">Invite your contacts to join this meeting</string>
    <string name="zm_msg_invite_indication_title">Call the person and say:</string>
    <string name="zm_msg_invite_indication_message_1">1. Go to %1$s </string>
    <string name="zm_msg_invite_indication_message_2">2. Enter ID: </string>
    <string name="zm_msg_sending_feedback">Sending…</string>
    <string name="zm_msg_sent_feedback_failed">Failed to send your feedback. Please try again later.</string>
    <string name="zm_msg_thanks_for_feedback">Thanks for your feedback!\n\nYour feedback is very important to us, and we\'re working hard to improve our service.</string>
    <string name="zm_msg_feedback_welcome"><![CDATA[For technical support, please visit <a href="%s">Support</a>.\n\nWe also welcome your ideas, requests or comments. Please enter your feedback here:]]></string>
</resources>