<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/share_image"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_image" />
        
        <TextView
            android:id="@+id/share_native_file"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_local_file" />
        
        <TextView
            android:id="@+id/share_box"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_box" />

        <TextView
            android:id="@+id/share_dropbox"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_dropbox" />

        <TextView
            android:id="@+id/share_google_drive"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_google_drive" />

        <TextView
            android:id="@+id/share_one_drive"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_one_drive" />

        <TextView
            android:id="@+id/share_url"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_url" />

        <TextView
            android:id="@+id/share_from_bookmark"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_from_bookmark" />

        <TextView
            android:id="@+id/share_screen"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_screen" />
        
        <TextView
            android:id="@+id/share_whiteboard"
            style="@style/ZMTextView.SettingsItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_settings_item_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:text="@string/zm_btn_share_whiteboard" />
    </LinearLayout>

</ScrollView>