<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/panelTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ZMTitleBar" >
        
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/zm_btn_back"
            style="@style/ZMBackButton" />
        
        <TextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/zm_title_invite" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zm_msg_invite_indication_title"
            style="@style/ZMTextView.Medium.OnLight"/>
        
        <TextView
            android:id="@+id/txtInviteIndication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/zm_msg_invite_indication_message_1"
            style="@style/ZMTextView.Medium.OnLight"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ZMTextView.Medium.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/zm_msg_invite_indication_message_2" />

            <TextView
                android:id="@+id/txtMeetingNumber"
                style="@style/ZMTextView.Medium.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="5dp"
                android:text="000-000-000"
                android:textColor="#ff0000" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/zm_btn_copy"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>