<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/panelTitleBar"
        style="@style/ZMTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zm_pt_titlebar_height" >

        <Button
            android:id="@+id/btnBack"
            style="@style/ZMBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/zm_btn_back" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/zm_title_feedback" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/panelOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/panelSendFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtWelcome"
                    style="@style/ZMTextView.Medium.OnLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zm_msg_feedback_welcome" />
                
                <EditText
                    android:id="@+id/edtFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" >

                <!--
                  Do not use requestFocus tag here. Else the soft keyboard cannot be opened
                  by clicking this EditText on some Android 3.x Tablets.
                -->
                    <!-- <requestFocus /> -->
                </EditText>

                <Button
                    android:id="@+id/btnSend"
                    style="@style/ZMButton.HappyPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/zm_btn_send" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtSending"
                style="@style/ZMTextView.Medium.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/zm_note_tip"
                android:text="@string/zm_msg_sending_feedback" />

            <TextView
                android:id="@+id/txtSentFailed"
                style="@style/ZMTextView.Medium.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/zm_note_tip"
                android:text="@string/zm_msg_sent_feedback_failed" />

            <TextView
                android:id="@+id/txtThanks"
                style="@style/ZMTextView.Medium.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/zm_note_tip"
                android:text="@string/zm_msg_thanks_for_feedback" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>