<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/zm_transparent"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:id="@+id/panelContent"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.TipMessage.Title.Medium.OnDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zm_msg_conf_waiting_to_invite_title" />

        <TextView
            android:id="@+id/txtMessage"
            style="@style/ZMTextView.TipMessage.OnDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/zm_msg_conf_waiting_to_invite" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/txtButton"
        style="@style/ZMTextView.TipMessage.Button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/zm_btn_ok" />

</LinearLayout>